# Copyright (C) 2007-2008 Daniel Prevost <dprevost@users.sourceforge.net>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

CLEANFILES = *~

BASE_FILES =                          \
             linux/autoconf.h         \
             linux/compiler-gcc.h     \
             linux/compiler.h         \
             linux/compiler-intel.h   \
             linux/linkage.h          \
             linux/spinlock_api_smp.h \
             linux/spinlock.h         \
             linux/spinlock_types.h   

I386_FILES =                           \
             asm-i386/alternative.h    \
             asm-i386/bitops.h         \
             asm-i386/cpufeature.h     \
             asm-i386/linkage.h        \
             asm-i386/spinlock.h       \
             asm-i386/spinlock_types.h \
             asm-i386/system.h         

EXTRA_DIST = $(BASE_FILES) $(I386_FILES)

distclean:

